--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,6 +19,7 @@
     "polished": "^4.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^7.0.15",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
@@ -27,6 +28,8 @@
     "@storybook/react-vite": "^7.0.12",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@vitejs/plugin-react": "^4.0.0",
+    "install": "^0.13.0",
+    "npm": "^9.6.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
