--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.3",
     "@stitches/react": "^1.2.8",
     "phosphor-react": "^1.4.1"
   },
