--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "storybook dev -p 6006",
     "build": "storybook build",
+    "build-storybook": "npm run build",
     "deploy-storybook": "storybook-to-ghpages"
   },
   "keywords": [],
