--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,4 +28,4 @@ jobs:
         working-directory: ./packages/docs
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
-          GK_TOKEN:  MyCompany:${{ secrets.GITHUB_TOKEN }}
+           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
