--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,8 +23,8 @@ jobs:
 
       - run: npm run build
         env:
-          TURBO_TOKEN: Q8tDNTFPtTzFXXSmBUteSwEJ
-          TURBO_TEAM: luiz504
+          TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          TURBO_TEAM: ${{ vars.VERCEL_TEAM }}
 
       - name: Debug Git Environment
         run: git config --list
